# M5StopWatch-UserDemo

./: .gitignore  README.md  sdkconfig.defaults
.github/workflows/: ble-stt-release.yml  ble-stt-tests.yml
main/: main.cpp
main/apps/: apps.h
main/apps/app_ble_hid_remote/: app_ble_hid_remote.cpp  app_ble_hid_remote.h
main/apps/app_ble_hid_remote/model/: ble_hid_remote.cpp  ble_hid_remote.h  speech_codec.cpp  speech_codec.h
main/apps/app_ble_hid_remote/view/: view.cpp  view.h
main/assets/: assets.h
main/assets/images/: icon_ble_hid.c
main/hal/: hal.h  hal_audio.cpp  hal_button.cpp
tools/ble_stt/: README.md  install.ps1  install.sh  pyproject.toml  run-service.sh
tools/ble_stt/ble_stt/: __init__.py  agreement.py  check.py  cli.py  config.py  daemon.py  doctor.py  main.py  protocol.py  recognizers.py  service.py  types.py
tools/ble_stt/macos/: M5StopWatch.spec  bootstrap-self-signing.sh  build-app.sh  entrypoint.py  requirements-build.txt
tools/ble_stt/systemd/: m5stopwatch-ble-stt.service
tools/ble_stt/tests/: test_doctor.py  test_interrupts.py  test_platforms.py  test_protocol.py
