[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "m5stopwatch-ble-stt"
version = "0.1.0"
description = "Local speech-to-text helper for the M5StopWatch BLE Remote app"
requires-python = ">=3.10"
dependencies = [
    "bleak>=2.1,<4",
    "faster-whisper>=1.2,<2",
    "numpy>=2,<3",
    "opencc-python-reimplemented>=0.1.7,<1",
]

[project.scripts]
ble-stt = "ble_stt.main:main"
ble-stt-check = "ble_stt.check:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ble_stt*"]
