[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "m5stopwatch-ble-stt"
version = "0.3.3"
description = "Cross-platform local speech-to-text helper for the M5StopWatch BLE Remote app"
requires-python = ">=3.10"
dependencies = [
    "bleak>=2.1,<3",
    "faster-whisper>=1.2,<2; sys_platform != 'darwin'",
    "mlx-whisper==0.4.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "numpy>=2,<3",
    "opencc-python-reimplemented>=0.1.7,<1",
    "pyobjc-framework-Cocoa>=11,<13; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=11,<13; sys_platform == 'darwin'",
]

[project.scripts]
ble-stt = "ble_stt.cli:main"
ble-stt-check = "ble_stt.check:main"
ble-stt-doctor = "ble_stt.doctor:main"
ble-stt-service = "ble_stt.service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ble_stt*"]
